syntax = "proto3";

package remoteks;

import "google/protobuf/Empty.proto";

// N.B. GRPC for Go will always add an error to the generated
// signatures, Empty is used in responses where we don't need
// additional information beyond this error.
service Store {
    // AddKey adds a key to the KeyStore, and if the key already exists,
    // succeeds.  Otherwise, returns an error if it cannot add.
    rpc AddKey (AddKeyMsg) returns (google.protobuf.Empty) {
    }
    // Should fail with ErrKeyNotFound if the keystore is operating normally
    // and knows that it does not store the requested key.
    rpc GetKey (KeyID) returns (KeyResp) {
    }
    rpc GetKeyInfo (KeyID) returns (KeyInfo) {
    }
    rpc ListKeys (google.protobuf.Empty) returns (KeyList) {
    }
    rpc RemoveKey (KeyID) returns (google.protobuf.Empty) {
    }
}

message AddKeyMsg {
    KeyInfo info = 1;
    PrivateKey key = 2;
}

message KeyID {
    string ID = 1;
}

message KeyInfo {
    string GUN = 1;
    string Role = 2;
}

message KeyList {
    map<string, KeyInfo> keys = 1;
}

message PrivateKey {
    string Algorithm = 1;
    bytes Public = 2;
    bytes Private = 3;
}

message KeyResp {
    string role = 1;
    PrivateKey key = 2;
}